<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="invisible"
        android:elevation="@dimen/elevation_10"
        android:background="?android:colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/title_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/font_18"
                android:fontFamily="@font/bold"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ltLoading"
        android:layout_width="@dimen/size_150"
        android:layout_height="@dimen/size_150"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:visibility="gone"
        app:lottie_loop="true"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_220"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_220"
                android:background="@drawable/bg_gradient_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/size_32"
                android:layout_height="@dimen/size_32"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_40"
                android:background="@drawable/bg_arrow_circle"
                android:padding="@dimen/padding_3"
                android:contentDescription="@string/title_icon"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_200"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_160"
                app:cardCornerRadius="@dimen/radius_10"
                app:cardElevation="@dimen/elevation_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_5"
                    android:contentDescription="@string/title_icon"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/foo"
                android:textSize="@dimen/font_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/ivBackground" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/foo"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_12"
                android:layout_marginTop="@dimen/margin_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <RatingBar
                android:id="@+id/rbRatting"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:isIndicator="true"
                android:max="5"
                android:rating="0"
                android:scaleX="1"
                android:scaleY="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

            <TextView
                android:id="@+id/tvRatting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_zero"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/font_12"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintStart_toEndOf="@+id/rbRatting"
                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_overview"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvGenre" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foo"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_cast"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_trailer"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/tvShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_show_all"
                android:textColor="@color/primary"
                android:fontFamily="@font/bold"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvVideo" />

            <TextView
                android:id="@+id/tvUserReview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_user_review"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/font_18"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintEnd_toStartOf="@+id/tvShowAll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvVideo" />

            <LinearLayout
                android:id="@+id/llEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserReview">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/ltReviewEmpty"
                    android:layout_width="@dimen/size_150"
                    android:layout_height="@dimen/size_150"
                    android:layout_gravity="center"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/empty" />
                <TextView
                    android:id="@+id/tvEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_empty_review"
                    android:fontFamily="@font/bold"
                    android:textSize="@dimen/font_16"
                    android:layout_marginStart="@dimen/margin_50"
                    android:layout_marginEnd="@dimen/margin_50"
                    android:layout_marginBottom="@dimen/margin_50"
                    android:textAlignment="center"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserReview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>