<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.ReviewActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/elevation_10"
        android:background="?android:colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/foo"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/font_16"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvRatting"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/light"
                android:text="@string/title_rattings_and_reviews"
                android:textSize="@dimen/font_12"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintEnd_toStartOf="@+id/tvRatting"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvRatting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_zero"
                android:layout_marginEnd="@dimen/margin_16"
                android:textSize="@dimen/font_14"
                android:drawablePadding="@dimen/padding_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableEndCompat="@drawable/ic_rating" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srReview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_150"
                app:lottie_loop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/adapter_review"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>